<resources>
    <string name="app_name">QWNASFirebaseQuotes</string>
    <string name="name">Quotes</string>
    <string name="explain">Choose a category to see a random quote:</string>
    <string name="about">About</string>
    <string name="random">Random</string>
    <string name="last">Last Run</string>
    <string name="attributed">attributed</string>
    <string name="quote">quote</string>
    <string name="reference">reference</string>
    <string name="date">date</string>
    <string name="dismiss">Dismiss</string>
    <string name="aboutTitle">About this application…</string>
    <string name="description">Choose from one of the categories available and the application will display a random quote.
    You may decide to choose a random category with the Random button. You may also pick out the last quote read with the Last Run button.</string>
    <string name="authors">William Ngo and Alena Shulzhenko</string>
    <string name="nodata">No data to display</string>
</resources>
