<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_about"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/black"
    tools:context="android518.qwnasfirebasequotes.AboutActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/aboutTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/aboutTitleTextView"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="@color/about"
            android:textColor="@color/black"
            android:padding="10dp"
            android:textSize="36sp" />

        <TextView
            android:text="@string/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/description"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:layout_margin="30dp" />

        <ImageView
            android:layout_width="match_parent"
            android:src="@drawable/droid"
            android:id="@+id/imageView"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/authors"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/authorsTextView"
            android:textColor="@color/white"
            android:gravity="bottom|center_horizontal" />
    </LinearLayout>

</RelativeLayout>
